GNOME Bugzilla – Bug 766515
playbin: fix suburidecodebin leak
Last modified: 2016-05-20 06:09:45 UTC
.
Created attachment 327978 [details] [review] playbin: fix suburidecodebin leak We take a ref before removing which was never freeded. The element is still alive anyway because the group has its own ref as well. Fix a leak with the 'test_suburi_error_wrongproto' test.
Attachment 327978 [details] pushed as 92343b6 - playbin: fix suburidecodebin leak
I wonder why we do the set_locked_state/ref/remove/unref here but not in any other place where elements are removed. It's useful in general if otherwise your element might be set to another state then NULL while removing it (by the bin).